# SteamMind_FASTAPI

./: README.md  crag.py  createVectorStore.py  main.py  pyproject.toml  requirements.txt
data/: Final CHATBOT data requirements.docx
nodes/: SystemPrompt.py  evalRetrivalNode.py  generateNode.py  models.py  reterivalNode.py  state.py  transformQueryNode.py  vectorStore.py
notebooks/: rag_pipeline.ipynb
steaminds-vector-store/: index.faiss  index.pkl
